日米覇権　今のところのまとめ　ドラフト

--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -1,14 +1,81 @@
 ---
-title: "(編集中)次の覇権国が日本だとしたら"
+title: "(編集中)仮説：次の覇権国が日本だとしたら"
 date: 2025-05-04T19:00:31+09:00
 categories:
   - Economy
 tags:
   - 新自由主義
+  - ソフトパワー
 ---
+
+## 仮説設定の理由
+
+デジタル通貨と中央銀行のことを考えていて、  
+それって、ポスト資本主義的な、新自由主義と社会民主主義の統合なんだろーなーと方向を感じつつも、  
+難しいことはわからないので、  
+違う角度から、  
+「次の覇権国が日本だとしたら」  
+と考えてみることにした。  
+
+## アイディア
+
+- 希少資源の分配は市場に任せず政府介入
+- 世界の田舎化、田舎の都市化
+- 軍事力や資本主義経済やハードパワーに直交する力
+  
+## 今のところのまとめ
+
+- 今、覇権国がすべきこと
+  - 獲得すべき力：望むものを手に入れる能力
+    - 戦争に勝つ力と、平和を勝ち取る力  
+  - 指標：どれだけ多くの同盟国を増やせたか
+- 仮説：日米のハード・ソフトパワー（軍事力・経済力・魅力）で覇権
+  - 米国のソフトパワー（信頼）が落ちている
+    - 背景：ハードパワー偏重：軍事力による覇権。通貨高、貿易赤字、インフレ、消費大国、産業の空洞化。
+    - きっかけ：市場への政府介入、自由貿易の否定、一方的な関税政策
+    - 現象：アメリカ嫌い、ドル売り、米国債売り
+  - 日本のソフトパワーが高まっている=世界の模範
+    - ワード：チャーミング、キュート、クール、エレガント、アメージング、イノベーティブ、洗練さ、調和、誠実、規律、道徳、礼儀、清潔、効率的、知的
+    - 漫画・アニメ・ゲームの体験：世界観・キャラクターへの愛着
+    - 東洋の文化と西洋文明の独特な融合、自然と都市機能の調和
+    - 高品質の技術・製品、原宿・渋谷のファッション
+    - 子供だけで外出できる安全
+    - 落とし物が戻ってくる高いマナー、思いやり
+    - 資金援助や平和外交の実績、高い経済力・安定した通貨（債権国）
+    - 静かで清潔な都市、スポーツでのフェアプレー
+    - 高い規律による効率性、誠実なビジネス、時間通りの鉄道、災害時の復旧
+    - 各種調査で高いランク：好感度・信頼度・観光客数
+- 環境・背景
+  - 国際情勢
+    - 経済：米国は強い消費（内需・インフレ・赤字）、中国は外需依存（製造・デフレ）、日本は債権国（通貨安・黒字）
+    - 資源：AI時代の資源分配：エネルギー、半導体（レアアース）
+    - 体制：行きすぎた市場主義と政府介入によるバランス
+  - 価値観の変化
+    - 市場重視で小さな政府の新自由主義から、政府介入による社会保障や共感・共有の社会民主主義的な社会へ
+    - 税=国のオーナーからの直接投資
+      - リターン=インフラ、産業
+      - 選挙=株主総会
+    - 神の見えざる手+政府介入
+      - 意思決定者：選挙で「オーナー」に選ばれた政治家
+      - 選挙：ニューメディア（SNSなど）による直接的コミュニケーション
+
+## 読書log
+
+### ジョセフ・ナイ　『ソフトパワー』
+
+- [序章]({{ '/20250505softpower/' | relative_url }})
+  - 覇権に必要なスマートパワー
+    - ハードパワー（軍事力）とソフトパワー（魅力）の両方が必要。
+  - ソフトパワー 
+    - 定義:
+      - 魅力によって望むものを手に入れる能力
+      - 平和を勝ち取るパワー
+    - 指標：どれだけ多くの同盟国を増やせたか
+- [第1章]({{ '/20250505softpower-c1/' | relative_url }})
 
 ## 読みたい本
 
-* [ジョセフ・ナイ『ソフトパワー』]({{ '/20250505softpower/' | relative_url }})
 * エマニュエル・ウォーラースタイン　世界システム論
+
+
 
