日本のポジティブなイメージ　整理

--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -8,20 +8,17 @@ tags:
   - ソフトパワー
 ---
 
-## 仮説設定の理由
+## 仮説設定の理由:「次の覇権国が日本だとしたら」  
 
 デジタル通貨と中央銀行のことを考えていて、  
 それって、ポスト資本主義的な、新自由主義と社会民主主義の統合なんだろーなーと方向を感じつつも、  
-難しいことはわからないので、  
-違う角度から、  
-「次の覇権国が日本だとしたら」  
-と考えてみることにした。  
+難しいことはわからないので、違う角度から考えてみることにした。  
 
 ## アイディア
 
 - 希少資源の分配は市場に任せず政府介入
 - 世界の田舎化、田舎の都市化
-- 軍事力や資本主義経済やハードパワーに直交する力
+- 軍事力や資本主義経済(ハードパワー)に直交する力（ソフトパワー）
   
 ## 今のところのまとめ
 
@@ -35,16 +32,17 @@ tags:
     - きっかけ：市場への政府介入、自由貿易の否定、一方的な関税政策
     - 現象：アメリカ嫌い、ドル売り、米国債売り
   - 日本のソフトパワーが高まっている=世界の模範
-    - ワード：チャーミング、キュート、クール、エレガント、アメージング、イノベーティブ、洗練さ、調和、誠実、規律、道徳、礼儀、清潔、効率的、知的
-    - 漫画・アニメ・ゲームの体験：世界観・キャラクターへの愛着
-    - 東洋の文化と西洋文明の独特な融合、自然と都市機能の調和
-    - 高品質の技術・製品、原宿・渋谷のファッション
-    - 子供だけで外出できる安全
-    - 落とし物が戻ってくる高いマナー、思いやり
-    - 資金援助や平和外交の実績、高い経済力・安定した通貨（債権国）
-    - 静かで清潔な都市、スポーツでのフェアプレー
-    - 高い規律による効率性、誠実なビジネス、時間通りの鉄道、災害時の復旧
+    - 日本のポジティブなイメージ
+      - チャーミング：漫画・アニメ・ゲームの体験（世界観・キャラクターへの愛着）
+      - エレガント、アメージング：東洋の文化と西洋文明の独特な融合、自然と都市機能の調和
+      - クール：高品質の技術・製品、原宿・渋谷のファッション、自由な発想の作品
+      - 大国：先進的インフラ、高い経済力・安定した通貨（債権国）
+      - 調和：資金援助や平和外交の実績、子供だけで外出できる安全
+      - 礼儀・道徳・共感：静かで清潔な都市、スポーツでのフェアプレー、落とし物が戻ってくる高いマナー
+      - 誠実・規律：誠実なビジネス、駅の効率性・時間通りの鉄道、災害時の復旧速度・パニックにならない人々
     - 各種調査で高いランク：好感度・信頼度・観光客数
+      - [参考:【売上上位のメディア・フランチャイズの一覧 - Wikipedia】](https://ja.wikipedia.org/wiki/%E5%A3%B2%E4%B8%8A%E4%B8%8A%E4%BD%8D%E3%81%AE%E3%83%A1%E3%83%87%E3%82%A3%E3%82%A2%E3%83%BB%E3%83%95%E3%83%A9%E3%83%B3%E3%83%81%E3%83%A3%E3%82%A4%E3%82%BA%E3%81%AE%E4%B8%80%E8%A6%A7)
+
 - 環境・背景
   - 国際情勢
     - 経済：米国は強い消費（内需・インフレ・赤字）、中国は外需依存（製造・デフレ）、日本は債権国（通貨安・黒字）
@@ -59,7 +57,7 @@ tags:
       - 意思決定者：選挙で「オーナー」に選ばれた政治家
       - 選挙：ニューメディア（SNSなど）による直接的コミュニケーション
 
-## 読書log
+## 参考文献
 
 ### ジョセフ・ナイ　『ソフトパワー』
 
