--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -1,5 +1,5 @@
 ---
-title: "(編集中)仮説：次の覇権国が日本だとしたら"
+title: "(編集中)仮説：次の覇権国が日本だとしたら〜「魅力」を「ディール」する：〜"
 date: 2025-05-04T19:00:31+09:00
 categories:
   - Economy
@@ -8,67 +8,109 @@ tags:
   - ソフトパワー
 ---
 
-## 仮説設定の理由:「次の覇権国が日本だとしたら」  
+## 本記事の概要
 
-デジタル通貨と中央銀行のことを考えていて、  
-それって、ポスト資本主義的な、新自由主義と社会民主主義の統合なんだろーなーと方向を感じつつも、  
-難しいことはわからないので、違う角度から考えてみることにした。  
+- 日米のハードパワー（軍事力・経済力）とソフトパワー（魅力）を中心に、覇権国としての日本の可能性を考察します。
+- 現在、アジアを中心とした地域で、アメリカの衰退と日本のソフトパワーの台頭が顕著です。
+- トランプ政権の政策は、昭和の日本の地方議員の政策と似ています。
 
-## アイディア
+## 仮説設定の理由・背景
 
-- 希少資源の分配は市場に任せず政府介入
-- 世界の田舎化、田舎の都市化
-- 軍事力や資本主義経済(ハードパワー)に直交する力（ソフトパワー）
-  
-## 今のところのまとめ
+当初の興味は、国家や通貨に対する「信頼」や、時代に流れる見えない力に注目し、外部環境を分析することでその本質に気づくことでした。
+そこで、「次の覇権国が日本だとしたら」という仮説を立て、現状からボトムアップで政治体制、価値観、安全保障、外交、産業育成、資源調達について考えました。
 
-- 今、覇権国がすべきこと
-  - 獲得すべき力：望むものを手に入れる能力
-    - 戦争に勝つ力と、平和を勝ち取る力  
+- 国家や通貨に対する「信頼」や、時代や場に流れる見えない力を感じたい
+  - それらについて、外部環境を分析的に整理し、気づく
+- デジタル通貨時代における国家、組織、個人の役割や振る舞いについて洞察したい
+- ポスト資本主義とは何か？
+  - 新自由主義と社会民主主義が統合される方向が見える
+- そこで、「次の覇権国が日本だとしたら」という仮説を立て、
+  - 理想論ではなく、現状からボトムアップで考察
+    - 政治体制、価値観、安全保障、外交、産業育成、資源調達
+
+
+## アイディア：「魅力」を「ディール」する：日米同盟のハード・ソフトパワー（軍事力・経済力・魅力）で覇権
+
+覇権には、単に軍事力や経済力といったハードパワーだけでなく、ソフトパワーの重要性も大きいです。
+アメリカが覇権を維持する（同盟国を増やす）ためには、衰退しているソフトパワーの強化が必要です。
+逆に日本は、漫画・アニメ・技術・文化などを通じて、国際的な魅力を高め、世界的な影響力を増しています。
+
+日本は軍事・安全保障面で、潜在的な技術力を有しており、今後さらにその力を活用する可能性があります。しかし、ハードパワーは依然として限られているため、アメリカの支援が不可欠です。
+
+「アジアという重要な地域」と「覇権」を考えると、日本と米国でディール（取引）できることが多数ありそうです。そして、このディールが深まれば、覇権の相当部分が日本にシフトすることになるでしょう。
+
+## 論拠・理由
+
+### 覇権に必要なこと
+
+- 獲得すべき力(望むものを手に入れる能力)
+  - 戦争に勝つ力と、平和を勝ち取る力の両立  
   - 指標：どれだけ多くの同盟国を増やせたか
-- 仮説：日米のハード・ソフトパワー（軍事力・経済力・魅力）で覇権
-  - 米国のソフトパワー（信頼）が落ちている
-    - 背景：ハードパワー偏重：軍事力による覇権。通貨高、貿易赤字、インフレ、消費大国、産業の空洞化。
-    - きっかけ：市場への政府介入、自由貿易の否定、一方的な関税政策
-    - 現象：アメリカ嫌い、ドル売り、米国債売り
-  - 日本のソフトパワーが高まっている=世界の模範
-    - 日本のポジティブなイメージ
-      - チャーミング：漫画・アニメ・ゲームの体験（世界観・キャラクターへの愛着）
-      - エレガント、アメージング：東洋の文化と西洋文明の独特な融合、自然と都市機能の調和
-      - クール：高品質の技術・製品、原宿・渋谷のファッション、自由な発想の作品
-      - 大国：先進的インフラ、高い経済力・安定した通貨（債権国）
-      - 調和：資金援助や平和外交の実績、子供だけで外出できる安全
-      - 礼儀・道徳・共感：静かで清潔な都市、スポーツでのフェアプレー、落とし物が戻ってくる高いマナー
-      - 誠実・規律：誠実なビジネス、駅の効率性・時間通りの鉄道、災害時の復旧速度・パニックにならない人々
-    - 各種調査で高いランク：好感度・信頼度・観光客数
-      - [参考:【売上上位のメディア・フランチャイズの一覧 - Wikipedia】](https://ja.wikipedia.org/wiki/%E5%A3%B2%E4%B8%8A%E4%B8%8A%E4%BD%8D%E3%81%AE%E3%83%A1%E3%83%87%E3%82%A3%E3%82%A2%E3%83%BB%E3%83%95%E3%83%A9%E3%83%B3%E3%83%81%E3%83%A3%E3%82%A4%E3%82%BA%E3%81%AE%E4%B8%80%E8%A6%A7)
+- 重要な地域：ビジネスの中心はお金が一番動いてるアジア　※欧米は国際政治の中心
 
-- 環境・背景
-  - 国際情勢
-    - 経済：米国は強い消費（内需・インフレ・赤字）、中国は外需依存（製造・デフレ）、日本は債権国（通貨安・黒字）
-    - 資源：AI時代の資源分配：エネルギー、半導体（レアアース）
-    - 体制：行きすぎた市場主義と政府介入によるバランス
-  - 価値観の変化
-    - 市場重視で小さな政府の新自由主義から、政府介入による社会保障や共感・共有の社会民主主義的な社会へ
-    - 税=国のオーナーからの直接投資
-      - リターン=インフラ、産業
-      - 選挙=株主総会
-    - 神の見えざる手+政府介入
-      - 意思決定者：選挙で「オーナー」に選ばれた政治家
-      - 選挙：ニューメディア（SNSなど）による直接的コミュニケーション
+- 参考
+  - ジョセフ・ナイ　『ソフトパワー』 [Soft Power: The Means To Success In World Politics: Nye Jr, Joseph S】](https://www.amazon.co.jp/Soft-Power-Success-Politics-English-ebook/dp/B06XCG4J18?ref_=ast_author_dp&dib=eyJ2IjoiMSJ9.nbezX-Y6A-UEhyD2Nlaa5MVoMo_cq08Pf1yF9Ym9WRoPNFVFjvSa2DJR4GpkrgEsa-oAktG43pIXvxVVALYyEGDigz9bVDgvR7Ba0iIM1AMmq8r4QsNIZj6T2a2frqijpdlBc451gBYrg52H4W9KoDuyZY7RsqLysD5b7R4B1X3TVUWHv-JJgTzXv8tnpnmqwrjm3pk6LVY0NvPxIDIiNkkV5Uv4Bj-tFZeyK_1-xuY.I-FIM4fT8EPE7H5XYUUTGtyDAcOOvkSZx1fXJslvqDA&dib_tag=AUTHOR)
+  - エルブリッジ・A・コルビー　『アジア・ファースト 新・アメリカの軍事戦略』
+    - トランプ政権 国防次官（政策担当）
+  - [A User’s Guide to Restructuring the Global Trading System](https://www.hudsonbaycapital.com/documents/FG/hudsonbay/research/638199_A_Users_Guide_to_Restructuring_the_Global_Trading_System.pdf?fbclid=IwY2xjawJ618lleHRuA2FlbQIxMABicmlkETE1cnh3WXhTRzIzc3FPbllDAR60v1i31obUUU6Ht7tvyU6NWMO_1YN7mLpboTM6hPtAfpBZwlzVoavL9biiVg_aem_NqTFLgbMmAHOGu9HZswVnw)
 
-## 参考文献
+### 日米の内部環境：パワーの現状
 
-### ジョセフ・ナイ　『ソフトパワー』
+- 米国のソフトパワー（信頼）が落ちている
+  - 背景：ハードパワー偏重：軍事力による覇権。通貨高、貿易赤字、インフレ、消費大国、産業の空洞化。
+  - きっかけ：市場への政府介入、自由貿易の否定、一方的な関税政策
+  - 現象：アメリカ嫌い、ドル・米国債売り
+- 日本のソフトパワーが高まっている=世界の模範に
+  - 日本のポジティブなイメージ
+    - チャーミング：漫画・アニメ・ゲームの体験（世界観・キャラクターへの愛着）
+    - エレガント、アメージング：東洋の文化と西洋文明の独特な融合、自然と都市機能の調和
+    - クール：高品質の技術・製品、原宿・渋谷のファッション、自由な発想の作品
+    - 大国：先進的インフラ、高い経済力・安定した通貨（債権国）
+    - 調和：資金援助や平和外交の実績、子供だけで外出できる安全
+    - 礼儀・道徳・共感：静かで清潔な都市、スポーツでのフェアプレー、落とし物が戻ってくる高いマナー
+    - 誠実・規律：誠実なビジネス、都市の効率性（コンビニ、時間通りの鉄道）、災害時の復旧・パニックにならない人々
+  - 各種調査で高いランク：好感度・信頼度・観光客数
+    - [参考:【売上上位のメディア・フランチャイズの一覧 - Wikipedia】](https://ja.wikipedia.org/wiki/%E5%A3%B2%E4%B8%8A%E4%B8%8A%E4%BD%8D%E3%81%AE%E3%83%A1%E3%83%87%E3%82%A3%E3%82%A2%E3%83%BB%E3%83%95%E3%83%A9%E3%83%B3%E3%83%81%E3%83%A3%E3%82%A4%E3%82%BA%E3%81%AE%E4%B8%80%E8%A6%A7)
+
+### 外部環境：国際情勢
+
+AI技術の進展に伴い、膨大な計算能力とデータ処理を支えるための電力の需要が急増し、これらのリソースは各国の競争力や経済の安定に直結する要素となっています。そのため、電力とレアアースの争奪が激化しています。特に、半導体製造や再生可能エネルギー技術の革新において、これらの資源は不可欠です。
+
+- 国際情勢
+  - 経済：米国は強い消費（内需・インフレ・赤字）、中国は外需依存（製造・デフレ）、日本は債権国（通貨安・黒字）
+  - 資源：AI時代の資源分配：エネルギー、レアアース（技術革新に不可欠）
+  - 体制：行きすぎた市場主義と政府介入によるバランス
+
+### トランプ政権の価値観に対する私の理解
+
+トランプ政権の政策は、昭和の日本の地方議員が推進した政策に似ています。  
+
+市場に対する神と「民の見えざる手」：政府が積極的に経済に関与し、産業や地域経済の育成を目指す点で共通しています。具体的には、税収をファンドのようにエクイティ（自己資本）として集め、その投資的支出（資産）はインフラや産業の発展を促進する事業に使われます。そのリターンは、経済成長や地域発展を通じて還元される仕組みです。
+
+共同体の資金調達：資本主義では有志から株式のように資金を集めますが、日本の田舎では町内会のように全員一律で集めることを善とする文化が残ります。米国政府はオーナー（国民）から関税という名目で従業員持ち株のように資金調達し、日本政府は国民の預金から半自動的に調達するのではなく外国投資家にアプローチするなど、揺り戻すかのように、二重らせんのように、さまざまな組織レベルで、相互が真逆の動きをしているように感じる機会が増えています。
+
+- 市場重視・小さな政府（新自由主義・株主資本主義）から、政府介入を重視した社会保障や共感・共有を基盤にする社会民主主義的（昭和の日本的）な社会への移行
+- 税=国のオーナーからの直接投資
+  - リターン=インフラ、産業
+  - 選挙=株主総会のような意思決定者を選ぶ機会
+- 関税率=経常収支をイーブンにするための目標値
+  - 手法：為替でも貿易収支でも手段は問わない。とりあえずイーブンに。
+- 神の見えざる手+政府介入
+  - 意思決定者：選挙で「オーナー」に選ばれた政治家
+  - 選挙：ニューメディア（SNSなど）による直接的コミュニケーション
+
+### アイディアの元となった気づき
+
+- 産業：AI時代の資源：希少資源（電力・鉱物）の分配は市場に任せず、政府が積極的に介入
+- 政治：グローバリズムの終焉：新たなローカル（価値ベース、コミュニティ主導、分散ネットワーク化）
+- 外交：新たな覇権：軍事力や資本主義経済（ハードパワー）とは異なる力（ソフトパワー）の台頭
+- 日本：失われた30年は、むしろ守り続けた30年だったのかもしれない。粛々とガラパゴスでGNH。
+  
+## 関連
+
+### 読書log:ジョセフ・ナイ　『ソフトパワー』
 
 - [序章]({{ '/20250505softpower/' | relative_url }})
-  - 覇権に必要なスマートパワー
-    - ハードパワー（軍事力）とソフトパワー（魅力）の両方が必要。
-  - ソフトパワー 
-    - 定義:
-      - 魅力によって望むものを手に入れる能力
-      - 平和を勝ち取るパワー
-    - 指標：どれだけ多くの同盟国を増やせたか
 - [第1章]({{ '/20250505softpower-c1/' | relative_url }})
 
 ## 読みたい本
