--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -1,5 +1,5 @@
 ---
-title: "(編集中)仮説：次の覇権国が日本だとしたら〜「魅力」を「ディール」する：〜"
+title: "(編集中)仮説：次の覇権国が日本だとしたら〜「魅力」を「ディール」する〜"
 date: 2025-05-04T19:00:31+09:00
 categories:
   - Economy
