--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -65,16 +65,25 @@ tags:
   - きっかけ：市場への政府介入、自由貿易の否定、一方的な関税政策
   - 現象：アメリカ嫌い、ドル・米国債売り
 - 日本のソフトパワーが高まっている=世界の模範に
-  - 日本のポジティブなイメージ
-    - チャーミング：漫画・アニメ・ゲームの体験（世界観・キャラクターへの愛着）
-    - エレガント、アメージング：東洋の文化と西洋文明の独特な融合、自然と都市機能の調和
-    - クール：高品質の技術・製品、原宿・渋谷のファッション、自由な発想の作品
-    - 大国：先進的インフラ、高い経済力・安定した通貨（債権国）
-    - 調和：資金援助や平和外交の実績、子供だけで外出できる安全
-    - 礼儀・道徳・共感：静かで清潔な都市、スポーツでのフェアプレー、落とし物が戻ってくる高いマナー
-    - 誠実・規律：誠実なビジネス、都市の効率性（コンビニ、時間通りの鉄道）、災害時の復旧・パニックにならない人々
   - 各種調査で高いランク：好感度・信頼度・観光客数
     - [参考:【売上上位のメディア・フランチャイズの一覧 - Wikipedia】](https://ja.wikipedia.org/wiki/%E5%A3%B2%E4%B8%8A%E4%B8%8A%E4%BD%8D%E3%81%AE%E3%83%A1%E3%83%87%E3%82%A3%E3%82%A2%E3%83%BB%E3%83%95%E3%83%A9%E3%83%B3%E3%83%81%E3%83%A3%E3%82%A4%E3%82%BA%E3%81%AE%E4%B8%80%E8%A6%A7)
+    - [参考:【2024年のベストカントリーランキング US News】](https://www.usnews.com/news/best-countries/articles/us-news-unveils-best-countries-rankings)
+    - [参考:【日本が「世界で最も魅力的な国」に選出！｜報道発表｜JNTO（日本政府観光局）】](https://www.jnto.go.jp/news/press/20241002.html)
+    - [参考:【最も信頼性の高い新車はどこのメーカー？ - コンシューマー・レポート】](https://www.consumerreports.org/cars/car-reliability-owner-satisfaction/who-makes-the-most-reliable-cars-a7824554938/)
+  - 日本のポジティブなイメージ
+    - チャーミング：漫画・アニメ・ゲームの体験（世界観・キャラクター・音楽への愛着）
+    - アメージング：東洋の文化と西洋文明の独特な融合、自然と都市機能の調和、折紙、忍者・侍
+    - クール：先進的インフラ、高品質の技術・製品、原宿・渋谷のファッション、自由な発想の作品
+    - 大国：世界最大の都市圏、高い経済力・安定した通貨（債権国）
+    - 産業・技術：器用、耐震・防災、リサイクル・省エネ、ロボット・エレクトロニクス、自動車・鉄道
+    - 知性：ノーベル賞受賞者数、良いものを取り入れるKaizen文化、教育文化（高い識字率）
+    - 誠実・優しさ・フレンドリー：おもてなし、他者への敬意・きづかい、差別が少ない
+    - 平和・調和：神道・禅文化、少ない格差、安価な医療費、資金援助や平和外交の実績、子供だけで外出できる安全、ユーモアのある取り組み（遊び心、風変わりなイベント、実物大のガンダム）、動物との共生（奈良の鹿・カルガモの引越し・駅のツバメなど）
+    - 礼儀・道徳：都市の静かさ、スポーツでのフェアプレー、落とし物が戻ってくる高いマナー、教育システム（掃除・給食を生徒が行う）、お辞儀
+    - 清潔：ハイテクトイレ、ゴミを持ち帰る人々
+    - 秩序・規律：生きがい・こだわり、長持ちする製品、誠実なビジネス、都市の効率性（コンビニ、時間通りの鉄道）、災害時の復旧・パニックにならない人々（レジリエンス）
+    - 食：伝統的な和食全般、本場並みの海外料理、家庭料理（カレーライスなど）、お菓子、コンビニの食品
+    - 独自性：歴史と伝統、なんでも魔改造、現存する唯一の表意文字、絵文字などガラパゴス的進化が多数
 
 ### 外部環境：国際情勢
 
