(推敲中)大野先生を思い出し感謝した：インフレの輸出とデフレの輸出の間で

--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -75,14 +75,14 @@ tags:
     - アメージング：東洋の文化と西洋文明の独特な融合、自然と都市機能の調和、折紙、忍者・侍
     - クール：先進的インフラ、高品質の技術・製品、原宿・渋谷のファッション、自由な発想の作品
     - 大国：世界最大の都市圏、高い経済力・安定した通貨（債権国）
-    - 産業・技術：器用、耐震・防災、リサイクル・省エネ、ロボット・エレクトロニクス、自動車・鉄道
+    - 産業・技術：器用、耐震・防災、リサイクル・省エネ、ロボット・宇宙・エレクトロニクス、自動車・鉄道
     - 知性：ノーベル賞受賞者数、良いものを取り入れるKaizen文化、教育文化（高い識字率）
     - 誠実・優しさ・フレンドリー：おもてなし、他者への敬意・きづかい、差別が少ない
     - 平和・調和：神道・禅文化、少ない格差、安価な医療費、資金援助や平和外交の実績、子供だけで外出できる安全、ユーモアのある取り組み（遊び心、風変わりなイベント、実物大のガンダム）、動物との共生（奈良の鹿・カルガモの引越し・駅のツバメなど）
     - 礼儀・道徳：都市の静かさ、スポーツでのフェアプレー、落とし物が戻ってくる高いマナー、教育システム（掃除・給食を生徒が行う）、お辞儀
-    - 清潔：ハイテクトイレ、ゴミを持ち帰る人々
-    - 秩序・規律：生きがい・こだわり、長持ちする製品、誠実なビジネス、都市の効率性（コンビニ、時間通りの鉄道）、災害時の復旧・パニックにならない人々（レジリエンス）
-    - 食：伝統的な和食全般、本場並みの海外料理、家庭料理（カレーライスなど）、お菓子、コンビニの食品
+    - 清潔・整頓：ハイテクトイレ、ゴミを持ち帰る人々、ミニマリズム
+    - 秩序・規律：生きがい・こだわり、長持ちする製品、誠実なビジネス、都市の効率性（コンビニ、時間通りの鉄道）、災害時の復旧・パニックにならない人々（レジリエンス）、団体競技の匠さ
+    - 食：伝統的な和食全般、独特のローカライズ（ラーメン、カレーライスなど）、お菓子、コンビニの食品
     - 独自性：歴史と伝統、なんでも魔改造、現存する唯一の表意文字、絵文字などガラパゴス的進化が多数
 
 ### 外部環境：国際情勢
@@ -129,6 +129,3 @@ AI技術の進展に伴い、膨大な計算能力とデータ処理を支える
 ## 読みたい本
 
 * エマニュエル・ウォーラースタイン　世界システム論
-
-
-
