--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -51,8 +51,11 @@ tags:
   - 戦争に勝つ力と、平和を勝ち取る力の両立  
   - 指標：どれだけ多くの同盟国を増やせたか
 - 重要な地域：ビジネスの中心はお金が一番動いてるアジア　※欧米は国際政治の中心
+- タイミング：大きな戦いの後に覇権国が生まれる
+  - 旧覇権国は債務・インフレに陥る
 
 - 参考
+  - [【レイ・ダリオ著 「変わりゆく世界秩序」 - YouTube】](https://www.youtube.com/watch?v=y3oy8y0EljY) 
   - ジョセフ・ナイ　『ソフトパワー』 [Soft Power: The Means To Success In World Politics: Nye Jr, Joseph S】](https://www.amazon.co.jp/Soft-Power-Success-Politics-English-ebook/dp/B06XCG4J18?ref_=ast_author_dp&dib=eyJ2IjoiMSJ9.nbezX-Y6A-UEhyD2Nlaa5MVoMo_cq08Pf1yF9Ym9WRoPNFVFjvSa2DJR4GpkrgEsa-oAktG43pIXvxVVALYyEGDigz9bVDgvR7Ba0iIM1AMmq8r4QsNIZj6T2a2frqijpdlBc451gBYrg52H4W9KoDuyZY7RsqLysD5b7R4B1X3TVUWHv-JJgTzXv8tnpnmqwrjm3pk6LVY0NvPxIDIiNkkV5Uv4Bj-tFZeyK_1-xuY.I-FIM4fT8EPE7H5XYUUTGtyDAcOOvkSZx1fXJslvqDA&dib_tag=AUTHOR)
   - エルブリッジ・A・コルビー　『アジア・ファースト 新・アメリカの軍事戦略』
     - トランプ政権 国防次官（政策担当）
@@ -125,6 +128,12 @@ AI技術の進展に伴い、膨大な計算能力とデータ処理を支える
 
 - [序章]({{ '/20250505softpower/' | relative_url }})
 - [第1章]({{ '/20250505softpower-c1/' | relative_url }})
+
+
+### 視聴log: レイ・ダリオ ビッグサイクル
+
+- [視聴log: レイ・ダリオ著 「変わりゆく世界秩序」 - YouTube]({{ '/20250511ChangingWorldOrder/' | relative_url }})
+
 
 ## 読みたい本
 
