--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -1,5 +1,5 @@
 ---
-title: "(更新中)仮説：次の覇権国が日本だとしたら〜「魅力」を「ディール」する〜"
+title: "(更新中:2025/5/11)仮説：次の覇権国が日本だとしたら〜「魅力」を「ディール」する〜"
 date: 2025-05-11T04:30:31+09:00
 categories:
   - Economy
@@ -10,38 +10,50 @@ tags:
 
 ## 本記事の概要
 
-- 日米のハードパワー（軍事力・経済力）とソフトパワー（魅力）を中心に、覇権国としての日本の可能性を考察します。
-- 現在、アジアを中心とした地域で、アメリカの衰退と日本のソフトパワーの台頭が顕著です。
-- トランプ政権の政策は、昭和の日本の地方議員の政策と似ています。
-
-## 仮説設定の理由・背景
-
-当初の興味は、国家や通貨に対する「信頼」や、時代に流れる見えない力に注目し、外部環境を分析することでその本質に気づくことでした。  
-
-4月9日21時ちょうど、関税に伴うトリプル安でアメリカへの「悲鳴のような不信認」を感じてから、被災地で感じた「安心」「信頼」の奥にあったカオスとパンドラの箱を思い出すことが増えてます。  
-
-政府、お金、資産、隣人、、、人は今、何を頼り、どのような調和を望んでいるのか。不足の受容と諦念も。  
-
-そこで、「次の覇権国が日本だとしたら」という仮説を立て、現状からボトムアップで政治体制、価値観、安全保障、外交、産業育成、資源調達について考えました。
-
-- 国家や通貨に対する「信頼」や、時代や場に流れる見えない力を感じたい
-  - それらについて、外部環境を分析的に整理し、気づく
-- デジタル通貨時代における国家、組織、個人の役割や振る舞いについて洞察したい
-- ポスト資本主義とは何か？
-  - 新自由主義と社会民主主義が統合される方向が見える
-- そこで、「次の覇権国が日本だとしたら」という仮説を立て、
-  - 理想論ではなく、現状からボトムアップで考察
-    - 政治体制、価値観、安全保障、外交、産業育成、資源調達
+- 日米のハードパワー（軍事力・経済力）とソフトパワー（魅力）を中心に、覇権国としての日本の可能性を考察。
+- 現在、アジアを中心とした地域で、アメリカの衰退と日本のソフトパワーの台頭が顕著。
+- トランプ政権の政策は、昭和の日本の地方議員の政策と似ている。
+  - 税を国のオーナーからの直接投資のように考えているのではないか？
 
 ## アイディア：「魅力」を「ディール」する：日米同盟のハード・ソフトパワー（軍事力・経済力・魅力）で覇権
 
-覇権には、単に軍事力や経済力といったハードパワーだけでなく、ソフトパワーの重要性も大きいです。
-アメリカが覇権を維持する（同盟国を増やす）ためには、衰退しているソフトパワーの強化が必要です。
-逆に日本は、漫画・アニメ・技術・文化などを通じて、国際的な魅力を高め、世界的な影響力を増しています。
+- 覇権には、単に軍事力や経済力といったハードパワーだけでなく、ソフトパワーも重要。
+  - アメリカが覇権を維持するためには、衰退しているソフトパワーの強化が必要。
+  - 逆に日本は、漫画・アニメ・技術・文化などを通じて、国際的な魅力を高め、世界的な影響力を増している。
 
-日本は軍事・安全保障面で、潜在的な技術力を有しており、今後さらにその力を活用する可能性があります。しかし、ハードパワーは依然として限られているため、アメリカの支援が不可欠です。
+- 日本の可能性
+  - 軍事・安全保障面で、潜在的な技術力を有しており、今後さらにその力を活用する可能性がある。
+  - しかし、ハードパワーは依然として限られているため、アメリカの支援が不可欠。
 
-「アジアという重要な地域」と「覇権」を考えると、日本と米国でディール（取引）できることが多数ありそうです。そして、このディールが深まれば、覇権の相当部分が日本にシフトすることになるでしょう。
+- お金の中心であるアジアという重要な地域
+  - アメリカの「覇権」を考えると、日本と米国でディール（取引）できることが多数ありそう。
+  - ディールが深まれば、覇権の相当部分が日本にシフトすることになる。
+
+## 仮説設定の理由・背景
+
+2025年4月9日21時ちょうど、関税に伴うトリプル安でアメリカへの「悲鳴のような不信認」を感じてから、被災地で感じた「安心」「信頼」の奥にあったカオスとパンドラの箱を思い出すことが増えています。  
+
+政府、お金、資産、隣人、、、人は今、何を頼り、どのような調和を望んでいるのか。不足の受容と諦念も。  
+
+- ドルへの不信認は今後どうなっていくのか？
+  - 国家や通貨に対する「信頼」や、時代に流れる見えない力に注目し、外部環境を分析すれば気づけるかもしれない。
+  - 世界の指標を元に世界の金利を決める、世界の中央銀行は生まれないのか？
+    - 2025/4のトリプル安など、米株との逆相関が弱まっている、または高止まりしている気がする
+    - ドル金利が米国の指標で決められているが、インフレを助長しているように見える
+- ポスト資本主義とはどのような社会か？
+  - 新自由主義と社会民主主義が統合される方向が見える
+  - 日本経済に追い風が吹いている？
+
+しかし、どこから手をつけて良いのかわかりません。
+そこで、「次の覇権国が日本だとしたら」という仮説を立て、現状からボトムアップで政治体制、価値観、安全保障、外交、産業育成、資源調達について考えました。
+
+### 参考文献等
+
+- [参考:【レイ・ダリオ著 「変わりゆく世界秩序」 - YouTube】](https://www.youtube.com/watch?v=y3oy8y0EljY) 
+- 参考:ジョセフ・ナイ　『ソフトパワー』 [Soft Power: The Means To Success In World Politics: Nye Jr, Joseph S】](https://www.amazon.co.jp/Soft-Power-Success-Politics-English-ebook/dp/B06XCG4J18?ref_=ast_author_dp&dib=eyJ2IjoiMSJ9.nbezX-Y6A-UEhyD2Nlaa5MVoMo_cq08Pf1yF9Ym9WRoPNFVFjvSa2DJR4GpkrgEsa-oAktG43pIXvxVVALYyEGDigz9bVDgvR7Ba0iIM1AMmq8r4QsNIZj6T2a2frqijpdlBc451gBYrg52H4W9KoDuyZY7RsqLysD5b7R4B1X3TVUWHv-JJgTzXv8tnpnmqwrjm3pk6LVY0NvPxIDIiNkkV5Uv4Bj-tFZeyK_1-xuY.I-FIM4fT8EPE7H5XYUUTGtyDAcOOvkSZx1fXJslvqDA&dib_tag=AUTHOR)
+- エルブリッジ・A・コルビー　『アジア・ファースト 新・アメリカの軍事戦略』
+  - トランプ政権 国防次官（政策担当）
+- 参考:[A User’s Guide to Restructuring the Global Trading System](https://www.hudsonbaycapital.com/documents/FG/hudsonbay/research/638199_A_Users_Guide_to_Restructuring_the_Global_Trading_System.pdf?fbclid=IwY2xjawJ618lleHRuA2FlbQIxMABicmlkETE1cnh3WXhTRzIzc3FPbllDAR60v1i31obUUU6Ht7tvyU6NWMO_1YN7mLpboTM6hPtAfpBZwlzVoavL9biiVg_aem_NqTFLgbMmAHOGu9HZswVnw)
 
 ## 論拠・理由
 
@@ -54,13 +66,6 @@ tags:
 - タイミング：大きな戦いの後に覇権国が生まれる
   - 旧覇権国は債務・インフレに陥る
 
-- 参考
-  - [【レイ・ダリオ著 「変わりゆく世界秩序」 - YouTube】](https://www.youtube.com/watch?v=y3oy8y0EljY) 
-  - ジョセフ・ナイ　『ソフトパワー』 [Soft Power: The Means To Success In World Politics: Nye Jr, Joseph S】](https://www.amazon.co.jp/Soft-Power-Success-Politics-English-ebook/dp/B06XCG4J18?ref_=ast_author_dp&dib=eyJ2IjoiMSJ9.nbezX-Y6A-UEhyD2Nlaa5MVoMo_cq08Pf1yF9Ym9WRoPNFVFjvSa2DJR4GpkrgEsa-oAktG43pIXvxVVALYyEGDigz9bVDgvR7Ba0iIM1AMmq8r4QsNIZj6T2a2frqijpdlBc451gBYrg52H4W9KoDuyZY7RsqLysD5b7R4B1X3TVUWHv-JJgTzXv8tnpnmqwrjm3pk6LVY0NvPxIDIiNkkV5Uv4Bj-tFZeyK_1-xuY.I-FIM4fT8EPE7H5XYUUTGtyDAcOOvkSZx1fXJslvqDA&dib_tag=AUTHOR)
-  - エルブリッジ・A・コルビー　『アジア・ファースト 新・アメリカの軍事戦略』
-    - トランプ政権 国防次官（政策担当）
-  - [A User’s Guide to Restructuring the Global Trading System](https://www.hudsonbaycapital.com/documents/FG/hudsonbay/research/638199_A_Users_Guide_to_Restructuring_the_Global_Trading_System.pdf?fbclid=IwY2xjawJ618lleHRuA2FlbQIxMABicmlkETE1cnh3WXhTRzIzc3FPbllDAR60v1i31obUUU6Ht7tvyU6NWMO_1YN7mLpboTM6hPtAfpBZwlzVoavL9biiVg_aem_NqTFLgbMmAHOGu9HZswVnw)
-
 ### 日米の内部環境：パワーの現状
 
 - 米国のソフトパワー（信頼）が落ちている
@@ -69,24 +74,8 @@ tags:
   - 現象：アメリカ嫌い、ドル・米国債売り
 - 日本のソフトパワーが高まっている=世界の模範に
   - 各種調査で高いランク：好感度・信頼度・観光客数
-    - [参考:【売上上位のメディア・フランチャイズの一覧 - Wikipedia】](https://ja.wikipedia.org/wiki/%E5%A3%B2%E4%B8%8A%E4%B8%8A%E4%BD%8D%E3%81%AE%E3%83%A1%E3%83%87%E3%82%A3%E3%82%A2%E3%83%BB%E3%83%95%E3%83%A9%E3%83%B3%E3%83%81%E3%83%A3%E3%82%A4%E3%82%BA%E3%81%AE%E4%B8%80%E8%A6%A7)
-    - [参考:【2024年のベストカントリーランキング US News】](https://www.usnews.com/news/best-countries/articles/us-news-unveils-best-countries-rankings)
-    - [参考:【日本が「世界で最も魅力的な国」に選出！｜報道発表｜JNTO（日本政府観光局）】](https://www.jnto.go.jp/news/press/20241002.html)
-    - [参考:【最も信頼性の高い新車はどこのメーカー？ - コンシューマー・レポート】](https://www.consumerreports.org/cars/car-reliability-owner-satisfaction/who-makes-the-most-reliable-cars-a7824554938/)
-  - 日本のポジティブなイメージ
-    - チャーミング：漫画・アニメ・ゲームの体験（世界観・キャラクター・音楽への愛着）
-    - アメージング：東洋の文化と西洋文明の独特な融合、自然と都市機能の調和、折紙、忍者・侍
-    - クール：先進的インフラ、高品質の技術・製品、原宿・渋谷のファッション、自由な発想の作品
-    - 大国：世界最大の都市圏、高い経済力・安定した通貨（債権国）
-    - 産業・技術：器用、耐震・防災、リサイクル・省エネ、ロボット・宇宙・エレクトロニクス、自動車・鉄道
-    - 知性：ノーベル賞受賞者数、良いものを取り入れるKaizen文化、教育文化（高い識字率）
-    - 誠実・優しさ・フレンドリー：おもてなし、他者への敬意・きづかい、差別が少ない
-    - 平和・調和：神道・禅文化、少ない格差、安価な医療費、資金援助や平和外交の実績、子供だけで外出できる安全、ユーモアのある取り組み（遊び心、風変わりなイベント、実物大のガンダム）、動物との共生（奈良の鹿・カルガモの引越し・駅のツバメなど）
-    - 礼儀・道徳：都市の静かさ、スポーツでのフェアプレー、落とし物が戻ってくる高いマナー、教育システム（掃除・給食を生徒が行う）、お辞儀
-    - 清潔・整頓：ハイテクトイレ、ゴミを持ち帰る人々、ミニマリズム
-    - 秩序・規律：生きがい・こだわり、長持ちする製品、誠実なビジネス、都市の効率性（コンビニ、時間通りの鉄道）、災害時の復旧・パニックにならない人々（レジリエンス）、団体競技の匠さ
-    - 食：伝統的な和食全般、独特のローカライズ（ラーメン、カレーライスなど）、お菓子、コンビニの食品
-    - 独自性：歴史と伝統、なんでも魔改造、現存する唯一の表意文字、絵文字などガラパゴス的進化が多数
+
+[詳細はこちら：日米の内部環境：パワーの現状 ジョセフ・ナイ『ソフトパワー』読書時log]({{ '/20250505softpower/' | relative_url }})
 
 ### 外部環境：国際情勢
 
@@ -101,7 +90,7 @@ AI技術の進展に伴い、膨大な計算能力とデータ処理を支える
 
 トランプ政権の政策は、昭和の日本の地方議員が推進した政策に似ています。  
 
-市場に対する神と「民の見えざる手」：政府が積極的に経済に関与し、産業や地域経済の育成を目指す点で共通しています。具体的には、税収をファンドのようにエクイティ（自己資本）として集め、その投資的支出（資産）はインフラや産業の発展を促進する事業に使われます。そのリターンは、経済成長や地域発展を通じて還元される仕組みです。
+市場に対する神と「民の手」：政府が積極的に経済に関与し、産業や地域経済の育成を目指す点で共通しています。具体的には、税収をファンドのようにエクイティ（自己資本）として集め、その投資的支出（資産）はインフラや産業の発展を促進する事業に使われます。そのリターンは、経済成長や地域発展を通じて還元される仕組みです。
 
 共同体の資金調達：資本主義では有志から株式のように資金を集めますが、日本の田舎では町内会のように全員一律で集めることを善とする文化が残ります。米国政府はオーナー（国民）から関税という名目で従業員持ち株のように資金調達し、日本政府は国民の預金から半自動的に調達するのではなく外国投資家にアプローチするなど、揺り戻すかのように、二重らせんのように、さまざまな組織レベルで、相互が真逆の動きをしているように感じる機会が増えています。
 
@@ -124,17 +113,15 @@ AI技術の進展に伴い、膨大な計算能力とデータ処理を支える
   
 ## 関連
 
-### 読書log:ジョセフ・ナイ　『ソフトパワー』
+### 読書・視聴log
 
-- [序章]({{ '/20250505softpower/' | relative_url }})
-- [第1章]({{ '/20250505softpower-c1/' | relative_url }})
-
-
-### 視聴log: レイ・ダリオ ビッグサイクル
-
+- [齋藤 ジン「世界秩序が変わるとき」読書中のメモ]({{ '/20250425reading-list-jin-saito/' | relative_url }})
+  - 内容：新自由主義が終わり、新たな時代が予見される。日本には追い風。
+- [読書log:ジョセフ・ナイ　『ソフトパワー』]({{ '/20250505softpower/' | relative_url }})
+  - 内容：覇権国家であるためには軍事力や経済力以外に、ソフトパワー（平和を勝ち取る力、同盟国を増やす力）が必要。
 - [視聴log: レイ・ダリオ著 「変わりゆく世界秩序」 - YouTube]({{ '/20250511ChangingWorldOrder/' | relative_url }})
-
+  - 内容：覇権国家にはコンドラチェフの波のような大きな循環がある。アメリカは衰退期
 
 ## 読みたい本
 
-* エマニュエル・ウォーラースタイン　世界システム論
+- エマニュエル・ウォーラースタイン　世界システム論
