--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -6,12 +6,15 @@ categories:
 tags:
   - 新自由主義
   - ソフトパワー
+  - ジョセフ・ナイ
+  - レイ・ダリオ
+  - 関税
 ---
 
 ## 本記事の概要
 
 - 日米のハードパワー（軍事力・経済力）とソフトパワー（魅力）を中心に、覇権国としての日本の可能性を考察。
-- 現在、アジアを中心とした地域で、アメリカの衰退と日本のソフトパワーの台頭が顕著。
+- アジアを中心とした地域で、アメリカの衰退と日本のソフトパワーの台頭が顕著。
 - トランプ政権の政策は、昭和の日本の地方議員の政策と似ている。
   - 税を国のオーナーからの直接投資のように考えているのではないか？
 
@@ -49,13 +52,20 @@ tags:
 
 ### 参考文献等
 
-- [参考:【レイ・ダリオ著 「変わりゆく世界秩序」 - YouTube】](https://www.youtube.com/watch?v=y3oy8y0EljY) 
-- 参考:ジョセフ・ナイ　『ソフトパワー』 [Soft Power: The Means To Success In World Politics: Nye Jr, Joseph S】](https://www.amazon.co.jp/Soft-Power-Success-Politics-English-ebook/dp/B06XCG4J18?ref_=ast_author_dp&dib=eyJ2IjoiMSJ9.nbezX-Y6A-UEhyD2Nlaa5MVoMo_cq08Pf1yF9Ym9WRoPNFVFjvSa2DJR4GpkrgEsa-oAktG43pIXvxVVALYyEGDigz9bVDgvR7Ba0iIM1AMmq8r4QsNIZj6T2a2frqijpdlBc451gBYrg52H4W9KoDuyZY7RsqLysD5b7R4B1X3TVUWHv-JJgTzXv8tnpnmqwrjm3pk6LVY0NvPxIDIiNkkV5Uv4Bj-tFZeyK_1-xuY.I-FIM4fT8EPE7H5XYUUTGtyDAcOOvkSZx1fXJslvqDA&dib_tag=AUTHOR)
-- エルブリッジ・A・コルビー　『アジア・ファースト 新・アメリカの軍事戦略』
-  - トランプ政権 国防次官（政策担当）
-- 参考:[A User’s Guide to Restructuring the Global Trading System](https://www.hudsonbaycapital.com/documents/FG/hudsonbay/research/638199_A_Users_Guide_to_Restructuring_the_Global_Trading_System.pdf?fbclid=IwY2xjawJ618lleHRuA2FlbQIxMABicmlkETE1cnh3WXhTRzIzc3FPbllDAR60v1i31obUUU6Ht7tvyU6NWMO_1YN7mLpboTM6hPtAfpBZwlzVoavL9biiVg_aem_NqTFLgbMmAHOGu9HZswVnw)
+1. [視聴log: レイ・ダリオ著 「変わりゆく世界秩序」 - YouTube]({{ '/20250511ChangingWorldOrder/' | relative_url }})
+  - 内容：覇権国家にはコンドラチェフの波のような大きな循環がある。アメリカは衰退期
+  - [参考:【レイ・ダリオのビッグサイクルから考察するアメリカ、日本の現在地と、AIスタートアップの2035年のビジネスチャンス｜斎藤喜寛 Yoshihiro Saito】](https://note.com/yoshihirosaito/n/nac525b27a963#8ea43755-cf10-4c28-8f12-194f0e5f1fd6)
+1. [読書log:ジョセフ・ナイ　『ソフトパワー』]({{ '/20250505softpower/' | relative_url }})
+  - 内容：覇権国家であるためには軍事力や経済力以外に、ソフトパワー（平和を勝ち取る力、同盟国を増やす力）が必要。
+1. [『アジア・ファースト 新・アメリカの軍事戦略』読書中のメモ]({{ '/20250428asia-first/' | relative_url }})
+  - 内容：中国を第一列島線の外に出さないことにアメリカは集中すべき。※著者はトランプ政権 国防次官（政策担当）
+1. [齋藤 ジン「世界秩序が変わるとき」読書中のメモ]({{ '/20250425reading-list-jin-saito/' | relative_url }})
+  - 内容：新自由主義が終わり、新たな時代が予見される。日本には追い風。
+1. [A User’s Guide to Restructuring the Global Trading System](https://www.hudsonbaycapital.com/documents/FG/hudsonbay/research/638199_A_Users_Guide_to_Restructuring_the_Global_Trading_System.pdf?fbclid=IwY2xjawJ618lleHRuA2FlbQIxMABicmlkETE1cnh3WXhTRzIzc3FPbllDAR60v1i31obUUU6Ht7tvyU6NWMO_1YN7mLpboTM6hPtAfpBZwlzVoavL9biiVg_aem_NqTFLgbMmAHOGu9HZswVnw)
+  - 内容：マールアラーゴ合意と呼ばれる関税と通貨合意を通じてドル安政策。  
+  - [参考:【トランプ関税の次はドル安政策か：トリフィンの流動性ジレンマとミランの『マールアラーゴ合意』】](https://www.nri.com/jp/media/column/kiuchi/20250508.html)
 
-## 論拠・理由
+## 分析
 
 ### 覇権に必要なこと
 
@@ -68,25 +78,26 @@ tags:
 
 ### 日米の内部環境：パワーの現状
 
-- 米国のソフトパワー（信頼）が落ちている
+- [詳細はこちら：日米の内部環境：パワーの現状 ジョセフ・ナイ『ソフトパワー』読書時log]({{ '/20250505softpower/' | relative_url }})
+
+1. 米国のソフトパワー（信頼）が落ちている
   - 背景：ハードパワー偏重：軍事力による覇権。通貨高、貿易赤字、インフレ、消費大国、産業の空洞化。
   - きっかけ：市場への政府介入、自由貿易の否定、一方的な関税政策
   - 現象：アメリカ嫌い、ドル・米国債売り
-- 日本のソフトパワーが高まっている=世界の模範に
+1. 日本のソフトパワーが高まっている=世界の模範に
   - 各種調査で高いランク：好感度・信頼度・観光客数
-
-[詳細はこちら：日米の内部環境：パワーの現状 ジョセフ・ナイ『ソフトパワー』読書時log]({{ '/20250505softpower/' | relative_url }})
 
 ### 外部環境：国際情勢
 
-AI技術の進展に伴い、膨大な計算能力とデータ処理を支えるための電力の需要が急増し、これらのリソースは各国の競争力や経済の安定に直結する要素となっています。そのため、電力とレアアースの争奪が激化しています。特に、半導体製造や再生可能エネルギー技術の革新において、これらの資源は不可欠です。
+AI技術の進展に伴い、膨大な計算能力とデータ処理を支えるための電力の需要が急増し、これらのリソースは各国の競争力や経済の安定に直結する要素となっています。  
+そのため、電力とレアアースの争奪が激化しています。特に、半導体製造や再生可能エネルギー技術の革新において、これらの資源は不可欠です。
 
-- 国際情勢
-  - 経済：米国は強い消費（内需・インフレ・赤字）、中国は外需依存（製造・デフレ）、日本は債権国（通貨安・黒字）
-  - 資源：AI時代の資源分配：エネルギー、レアアース（技術革新に不可欠）
-  - 体制：行きすぎた市場主義と政府介入によるバランス
 
-### トランプ政権の価値観に対する私の理解
+- 経済：米国は強い消費（内需・インフレ・赤字）、中国は外需依存（製造・デフレ）、日本は債権国（通貨安・黒字）
+- 資源：AI時代の資源分配：エネルギー、レアアース（技術革新に不可欠）
+- 体制：行きすぎた市場主義と政府介入によるバランス
+
+### トランプ政権の価値観：私の理解
 
 トランプ政権の政策は、昭和の日本の地方議員が推進した政策に似ています。  
 
@@ -94,15 +105,17 @@ AI技術の進展に伴い、膨大な計算能力とデータ処理を支える
 
 共同体の資金調達：資本主義では有志から株式のように資金を集めますが、日本の田舎では町内会のように全員一律で集めることを善とする文化が残ります。米国政府はオーナー（国民）から関税という名目で従業員持ち株のように資金調達し、日本政府は国民の預金から半自動的に調達するのではなく外国投資家にアプローチするなど、揺り戻すかのように、二重らせんのように、さまざまな組織レベルで、相互が真逆の動きをしているように感じる機会が増えています。
 
-- 市場重視・小さな政府（新自由主義・株主資本主義）から、政府介入を重視した社会保障や共感・共有を基盤にする社会民主主義的（昭和の日本的）な社会への移行
-- 税=国のオーナーからの直接投資
+- 体制:ポスト新自由主義=社会民主主義的な格差是正にシフト?
+  - 市場重視・小さな政府（新自由主義・株主資本主義）から、政府介入を重視した社会保障や共感・共有を基盤にする社会民主主義的（昭和の日本的）な社会への移行
+- 税:=国のオーナーからの直接投資
   - リターン=インフラ、産業
   - 選挙=株主総会のような意思決定者を選ぶ機会
-- 関税率=経常収支をイーブンにするための目標値
+- 関税率:=経常収支をイーブンにするための目標値
   - 手法：為替でも貿易収支でも手段は問わない。とりあえずイーブンに。
-- 神の見えざる手+政府介入
+- 市場:神の見えざる手+民の手（デジタル人民直性的）
   - 意思決定者：選挙で「オーナー」に選ばれた政治家
   - 選挙：ニューメディア（SNSなど）による直接的コミュニケーション
+  - 経済：積極的に政府が介入。政官財が協調。
 
 ### アイディアの元となった気づき
 
@@ -110,17 +123,6 @@ AI技術の進展に伴い、膨大な計算能力とデータ処理を支える
 - 政治：グローバリズムの終焉：新たなローカル（価値ベース、コミュニティ主導、分散ネットワーク化）
 - 外交：新たな覇権：軍事力や資本主義経済（ハードパワー）とは異なる力（ソフトパワー）の台頭
 - 日本：失われた30年は、むしろ守り続けた30年だったのかもしれない。粛々とガラパゴスでGNH。
-  
-## 関連
-
-### 読書・視聴log
-
-- [齋藤 ジン「世界秩序が変わるとき」読書中のメモ]({{ '/20250425reading-list-jin-saito/' | relative_url }})
-  - 内容：新自由主義が終わり、新たな時代が予見される。日本には追い風。
-- [読書log:ジョセフ・ナイ　『ソフトパワー』]({{ '/20250505softpower/' | relative_url }})
-  - 内容：覇権国家であるためには軍事力や経済力以外に、ソフトパワー（平和を勝ち取る力、同盟国を増やす力）が必要。
-- [視聴log: レイ・ダリオ著 「変わりゆく世界秩序」 - YouTube]({{ '/20250511ChangingWorldOrder/' | relative_url }})
-  - 内容：覇権国家にはコンドラチェフの波のような大きな循環がある。アメリカは衰退期
 
 ## 読みたい本
 
