本記事の概要

--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -13,10 +13,13 @@ tags:
 
 ## 本記事の概要
 
-- 日米のハードパワー（軍事力・経済力）とソフトパワー（魅力）を中心に、覇権国としての日本の可能性を考察。
-- アジアを中心とした地域で、アメリカの衰退と日本のソフトパワーの台頭が顕著。
-- トランプ政権の政策は、昭和の日本の地方議員の政策と似ている。
-  - 税を国のオーナーからの直接投資のように考えているのではないか？
+- 覇権国としての日本の可能性を探る。
+  - ディールの内容次第では覇権の一部が日本にシフトするかもしれない。
+    - アジアを中心とした地域で、アメリカの衰退と日本のソフトパワーの台頭が顕著。
+      - 日米のハードパワー（軍事力・経済力）とソフトパワー（魅力）が補完的に機能しそう。
+  - トランプ政権の政策は、昭和の日本の地方議員の政策と似ている。
+    - 税を国のオーナーからの直接投資のように考えているのではないか？
+    - 新自由主義から社会民主主義へのシフトだとしたら、ポスト資本主義的な方向性で有利かもしれない。
 
 ## アイディア：「魅力」を「ディール」する：日米同盟のハード・ソフトパワー（軍事力・経済力・魅力）で覇権
 
@@ -32,7 +35,7 @@ tags:
   - アメリカの「覇権」を考えると、日本と米国でディール（取引）できることが多数ありそう。
   - ディールが深まれば、覇権の相当部分が日本にシフトすることになる。
 
-## 仮説設定の理由・背景
+## 仮説設定の理由・背景：アメリカの悲鳴と各国の困惑
 
 2025年4月9日21時ちょうど、関税に伴うトリプル安でアメリカへの「悲鳴のような不信認」を感じてから、被災地で感じた「安心」「信頼」の奥にあったカオスとパンドラの箱を思い出すことが増えています。  
 
@@ -48,7 +51,9 @@ tags:
   - 日本経済に追い風が吹いている？
 
 しかし、どこから手をつけて良いのかわかりません。
-そこで、「次の覇権国が日本だとしたら」という仮説を立て、現状からボトムアップで政治体制、価値観、安全保障、外交、産業育成、資源調達について考えました。
+
+一方、関税に関して、各国との二国間合意（ディール）で決定する意向をアメリカが示していますが、「具体的には何を？」という困惑が各国の反応から感じます。
+そこで、ディールの内容（と副産物）が「次の覇権国は日本」という視点・切り口で考えてみました。
 
 ### 参考文献等
 
