基軸通貨負担は？

--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -13,13 +13,14 @@ tags:
 
 ## 本記事の概要
 
-- 覇権国としての日本の可能性を探る。
-  - ディールの内容次第では覇権の一部が日本にシフトするかもしれない。
-    - アジアを中心とした地域で、アメリカの衰退と日本のソフトパワーの台頭が顕著。
-      - 日米のハードパワー（軍事力・経済力）とソフトパワー（魅力）が補完的に機能しそう。
-  - トランプ政権の政策は、昭和の日本の地方議員の政策と似ている。
-    - 税を国のオーナーからの直接投資のように考えているのではないか？
-    - 新自由主義から社会民主主義へのシフトだとしたら、ポスト資本主義的な方向性で有利かもしれない。
+- 目的：覇権国としての日本の可能性を探ることで気づきを得たい
+  - 想定しているのは「東アジア共栄圏を核に軍事力で」という従来イメージではありません。
+- トランプ関税におけるディールの内容次第では覇権の一部が日本にシフトするかもしれない。
+  - アジアを中心とした地域で、アメリカの衰退と日本のソフトパワーの台頭が顕著。
+    - 日米のハードパワー（軍事力・経済力）とソフトパワー（魅力）が補完的に機能しそう。
+- トランプ政権の政策は、昭和の日本の地方議員の政策と似ている。
+  - 税を国のオーナーからの直接投資のように考えているのではないか？
+  - 新自由主義から社会民主主義へのシフトだとしたら、ポスト資本主義的な方向性で有利かもしれない。
 
 ## アイディア：「魅力」を「ディール」する：日米同盟のハード・ソフトパワー（軍事力・経済力・魅力）で覇権
 
@@ -54,6 +55,13 @@ tags:
 
 一方、関税に関して、各国との二国間合意（ディール）で決定する意向をアメリカが示していますが、「具体的には何を？」という困惑が各国の反応から感じます。
 そこで、ディールの内容（と副産物）が「次の覇権国は日本」という視点・切り口で考えてみました。
+
+### 関連する問い：基軸通貨は？
+
+- ビットコイン（貯蔵）がゴールドのように、ステーブルコイン（交換）がドルのように使われる未来において、富はどこに、どのように集まるのか？覇権は？国家は？基軸通貨の負担は？
+  - 「分散型ネットワーク」？
+    - スピード、コスト、中立性、透明性
+  - 行政的な機能はブロックチェーン上のアプリで行われる？
 
 ### 参考文献等
 
