無リスク資産

--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -14,7 +14,8 @@ tags:
 ## 本記事の概要
 
 - 目的：覇権国としての日本の可能性を探ることで気づきを得たい
-  - 想定しているのは「東アジア共栄圏を核に軍事力で」という従来イメージではありません。
+  - ※想定しているのは「東アジア共栄圏を核に軍事力で」という従来イメージではありません。
+    - 通貨、市場、行政機能がブロックチェーン上で管理される社会
 - トランプ関税におけるディールの内容次第では覇権の一部が日本にシフトするかもしれない。
   - アジアを中心とした地域で、アメリカの衰退と日本のソフトパワーの台頭が顕著。
     - 日米のハードパワー（軍事力・経済力）とソフトパワー（魅力）が補完的に機能しそう。
@@ -62,6 +63,8 @@ tags:
   - 「分散型ネットワーク」？
     - スピード、コスト、中立性、透明性
   - 行政的な機能はブロックチェーン上のアプリで行われる？
+  - 基軸通貨負担は？特権はどうなる？
+    - その時の無リスク資産は何？
 
 ### 参考文献等
 
