- パワーを支える価値観は？

--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -57,14 +57,20 @@ tags:
 一方、関税に関して、各国との二国間合意（ディール）で決定する意向をアメリカが示していますが、「具体的には何を？」という困惑が各国の反応から感じます。
 そこで、ディールの内容（と副産物）が「次の覇権国は日本」という視点・切り口で考えてみました。
 
-### 関連する問い：基軸通貨は？
+### 関連する問い：
 
-- ビットコイン（貯蔵）がゴールドのように、ステーブルコイン（交換）がドルのように使われる未来において、富はどこに、どのように集まるのか？覇権は？国家は？基軸通貨の負担は？
-  - 「分散型ネットワーク」？
-    - スピード、コスト、中立性、透明性
-  - 行政的な機能はブロックチェーン上のアプリで行われる？
-  - 基軸通貨負担は？特権はどうなる？
-    - その時の無リスク資産は何？
+- 基軸通貨は？
+  - ビットコイン（貯蔵）がゴールドのように、ステーブルコイン（交換）がドルのように使われる未来において、富はどこに、どのように集まるのか？覇権は？国家は？基軸通貨の負担は？
+    - 「分散型ネットワーク」？
+      - スピード、コスト、中立性、透明性
+    - 行政的な機能はブロックチェーン上のアプリで行われる？
+    - 基軸通貨負担は？特権はどうなる？
+      - その時の無リスク資産は何？
+
+- パワーを支える価値観は？
+  - 成人発達理論の段階から類推できないか？
+    - ソフトパワーと信頼・信認は人々の心に生まれる
+    - 暴力・軍事力よりも、友好的・外交的な態度が好まれる時代に変化した？
 
 ### 参考文献等
 
