--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -46,8 +46,11 @@ tags:
 - ドルへの不信認は今後どうなっていくのか？
   - 国家や通貨に対する「信頼」や、時代に流れる見えない力に注目し、外部環境を分析すれば気づけるかもしれない。
   - 世界の指標を元に世界の金利を決める、世界の中央銀行は生まれないのか？
-    - 2025/4のトリプル安など、米株との逆相関が弱まっている、または高止まりしている気がする
     - ドル金利が米国の指標で決められているが、インフレを助長しているように見える
+    - 歪みのような気になるシグナル
+      - 米債権利回りの高止まり傾向。株との逆相関が弱まっている、または高止まりしている気がする
+        - 2025/4の米国トリプル安
+      - 日本40年債と10年債の差が拡大（10年債は政府介入があり得る）
 - ポスト資本主義とはどのような社会か？
   - 新自由主義と社会民主主義が統合される方向が見える
   - 日本経済に追い風が吹いている？
