私の国家観

--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -54,6 +54,10 @@ tags:
 - ポスト資本主義とはどのような社会か？
   - 新自由主義と社会民主主義が統合される方向が見える
   - 日本経済に追い風が吹いている？
+  - 私の国家観：国家とは、生き方と補給を守る枠。
+    - それが揺らぐとき、覇権国が秩序を支える。
+    - どちらも、信頼の上に立つ手段。
+      - 家族や地域と似ている。
 
 しかし、どこから手をつけて良いのかわかりません。
 
