--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -52,13 +52,15 @@ tags:
         - 2025/4の米国トリプル安
       - 日本40年債と10年債の差が拡大（10年債は政府介入があり得る）
 - ポスト資本主義とはどのような社会か？
-  - 新自由主義と社会民主主義が統合される方向が見える
   - 日本経済に追い風が吹いている？
-  - 私の国家観：国家とは、生き方と補給を守る枠。
-    - それが揺らぐとき、覇権国が秩序を支える。
-    - どちらも、信頼の上に立つ手段。
-      - 家族や地域と似ている。
-
+  - 新自由主義と社会民主主義が統合される方向が見える
+    - デジタル空間+警察力？
+    - 私の国家観：国家とは、生き方と補給を守る枠。
+      - 生き方は、内なる精神の自由と縛りから生まれる。
+        - その形は、家族を映し、国家へとフラクタルに連なる。
+      - それが揺らぐとき、覇権国が秩序(法や警察)を支える。父のように。
+      - どちらも、信頼で成り立つ。
+  
 しかし、どこから手をつけて良いのかわかりません。
 
 一方、関税に関して、各国との二国間合意（ディール）で決定する意向をアメリカが示していますが、「具体的には何を？」という困惑が各国の反応から感じます。
