「戦闘力」と「魅力」で支持されるアニメキャラにヒントがありそう

--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -48,16 +48,17 @@ tags:
   - 世界の指標を元に世界の金利を決める、世界の中央銀行は生まれないのか？
     - ドル金利が米国の指標で決められているが、インフレを助長しているように見える
     - 歪みのような気になるシグナル
-      - 米債権利回りの高止まり傾向。株との逆相関が弱まっている、または高止まりしている気がする
+      - 米債権利回りの高止まり傾向。米株式との相関が弱まっている。
         - 2025/4の米国トリプル安
-      - 日本40年債と10年債の差が拡大（10年債は政府介入があり得る）
+      - 日本40年債(市場)と10年債（政府介入）の差
 - ポスト資本主義とはどのような社会か？
   - 日本経済に追い風が吹いている？
+    - 「戦闘力」と「魅力」で支持されるアニメキャラにヒントがありそう
   - 新自由主義と社会民主主義が統合される方向が見える
     - デジタル空間+警察力？
     - 私の国家観：国家とは、生き方と補給を守る枠。
       - 生き方は、内なる精神の自由と縛りから生まれる。
-        - その形は、家族を映し、国家へとフラクタルに連なる。
+        - その形は、家族に映し、会社や国家へとフラクタルに連なる。
       - それが揺らぐとき、覇権国が秩序(法や警察)を支える。父のように。
       - どちらも、信頼で成り立つ。
   
