--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -54,6 +54,9 @@ tags:
 - ポスト資本主義とはどのような社会か？
   - 日本経済に追い風が吹いている？
     - 「戦闘力」と「魅力」で支持されるアニメキャラにヒントがありそう
+    - ポスト資本主義の覇権とは、命令する者ではなく、安心して感謝とわがままをぶつけられる「甘えさせてくれる者」の可能性。依存させてあげる母のように。
+    - エフェクチュエーション型の世界と向き合うのであれば糟糠の妻のような居場所的国家が必要かもしれない。
+      - 秩序サポーター型覇権？
   - 新自由主義と社会民主主義が統合される方向が見える
     - デジタル空間+警察力？
     - 私の国家観：国家とは、生き方と補給を守る枠。
@@ -67,7 +70,7 @@ tags:
 一方、関税に関して、各国との二国間合意（ディール）で決定する意向をアメリカが示していますが、「具体的には何を？」という困惑が各国の反応から感じます。
 そこで、ディールの内容（と副産物）が「次の覇権国は日本」という視点・切り口で考えてみました。
 
-### 関連する問い：
+### 関連する問い
 
 - 基軸通貨は？
   - ビットコイン（貯蔵）がゴールドのように、ステーブルコイン（交換）がドルのように使われる未来において、富はどこに、どのように集まるのか？覇権は？国家は？基軸通貨の負担は？
@@ -86,14 +89,14 @@ tags:
 
 1. [視聴log: レイ・ダリオ著 「変わりゆく世界秩序」 - YouTube]({{ '/20250511ChangingWorldOrder/' | relative_url }})
   - 内容：覇権国家にはコンドラチェフの波のような大きな循環がある。アメリカは衰退期
-  - [参考:【レイ・ダリオのビッグサイクルから考察するアメリカ、日本の現在地と、AIスタートアップの2035年のビジネスチャンス｜斎藤喜寛 Yoshihiro Saito】](https://note.com/yoshihirosaito/n/nac525b27a963#8ea43755-cf10-4c28-8f12-194f0e5f1fd6)
-1. [読書log:ジョセフ・ナイ　『ソフトパワー』]({{ '/20250505softpower/' | relative_url }})
+  - [参考:【レイ・ダリオのビッグサイクルから考察するアメリカ、日本の現在地と、AIスタートアップの2035年のビジネスチャンス｜斎藤喜寛 Yoshihiro Saito】](https://note.com/yoshihirosaito/n/nac525b27a963)
+2. [読書log:ジョセフ・ナイ　『ソフトパワー』]({{ '/20250505softpower/' | relative_url }})
   - 内容：覇権国家であるためには軍事力や経済力以外に、ソフトパワー（平和を勝ち取る力、同盟国を増やす力）が必要。
-1. [『アジア・ファースト 新・アメリカの軍事戦略』読書中のメモ]({{ '/20250428asia-first/' | relative_url }})
+3. [『アジア・ファースト 新・アメリカの軍事戦略』読書中のメモ]({{ '/20250428asia-first/' | relative_url }})
   - 内容：中国を第一列島線の外に出さないことにアメリカは集中すべき。※著者はトランプ政権 国防次官（政策担当）
-1. [齋藤 ジン「世界秩序が変わるとき」読書中のメモ]({{ '/20250425reading-list-jin-saito/' | relative_url }})
+4. [齋藤 ジン「世界秩序が変わるとき」読書中のメモ]({{ '/20250425reading-list-jin-saito/' | relative_url }})
   - 内容：新自由主義が終わり、新たな時代が予見される。日本には追い風。
-1. [A User’s Guide to Restructuring the Global Trading System](https://www.hudsonbaycapital.com/documents/FG/hudsonbay/research/638199_A_Users_Guide_to_Restructuring_the_Global_Trading_System.pdf?fbclid=IwY2xjawJ618lleHRuA2FlbQIxMABicmlkETE1cnh3WXhTRzIzc3FPbllDAR60v1i31obUUU6Ht7tvyU6NWMO_1YN7mLpboTM6hPtAfpBZwlzVoavL9biiVg_aem_NqTFLgbMmAHOGu9HZswVnw)
+5. [A User’s Guide to Restructuring the Global Trading System](https://www.hudsonbaycapital.com/documents/FG/hudsonbay/research/638199_A_Users_Guide_to_Restructuring_the_Global_Trading_System.pdf?fbclid=IwY2xjawJ618lleHRuA2FlbQIxMABicmlkETE1cnh3WXhTRzIzc3FPbllDAR60v1i31obUUU6Ht7tvyU6NWMO_1YN7mLpboTM6hPtAfpBZwlzVoavL9biiVg_aem_NqTFLgbMmAHOGu9HZswVnw)
   - 内容：マールアラーゴ合意と呼ばれる関税と通貨合意を通じてドル安政策。  
   - [参考:【トランプ関税の次はドル安政策か：トリフィンの流動性ジレンマとミランの『マールアラーゴ合意』】](https://www.nri.com/jp/media/column/kiuchi/20250508.html)
 
