インテグラル理論

--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -99,6 +99,8 @@ tags:
 5. [A User’s Guide to Restructuring the Global Trading System](https://www.hudsonbaycapital.com/documents/FG/hudsonbay/research/638199_A_Users_Guide_to_Restructuring_the_Global_Trading_System.pdf?fbclid=IwY2xjawJ618lleHRuA2FlbQIxMABicmlkETE1cnh3WXhTRzIzc3FPbllDAR60v1i31obUUU6Ht7tvyU6NWMO_1YN7mLpboTM6hPtAfpBZwlzVoavL9biiVg_aem_NqTFLgbMmAHOGu9HZswVnw)
   - 内容：マールアラーゴ合意と呼ばれる関税と通貨合意を通じてドル安政策。  
   - [参考:【トランプ関税の次はドル安政策か：トリフィンの流動性ジレンマとミランの『マールアラーゴ合意』】](https://www.nri.com/jp/media/column/kiuchi/20250508.html)
+6. [【読書log:[ケン・ウィルバーの統合心理学]：経験と洞察】 ](https://pjdhiro.blogspot.com/2023/11/ken-wilbers-integral-psychology.html)  
+  -  [参考:【インテグラル理論 by ケン・ウィルバー  EARTSHIP CONSULTING】](https://www.earthship-c.com/psychology/integral-theory-by-ken-wilber/)
 
 ## 分析
 
@@ -136,9 +138,12 @@ AI技術の進展に伴い、膨大な計算能力とデータ処理を支える
 
 トランプ政権の政策は、昭和の日本の地方議員が推進した政策に似ています。  
 
-市場に対する神と「民の手」：政府が積極的に経済に関与し、産業や地域経済の育成を目指す点で共通しています。具体的には、税収をファンドのようにエクイティ（自己資本）として集め、その投資的支出（資産）はインフラや産業の発展を促進する事業に使われます。そのリターンは、経済成長や地域発展を通じて還元される仕組みです。
+#### 市場に対する神と「民の手」:  
 
-共同体の資金調達：資本主義では有志から株式のように資金を集めますが、日本の田舎では町内会のように全員一律で集めることを善とする文化が残ります。米国政府はオーナー（国民）から関税という名目で従業員持ち株のように資金調達し、日本政府は国民の預金から半自動的に調達するのではなく外国投資家にアプローチするなど、揺り戻すかのように、二重らせんのように、さまざまな組織レベルで、相互が真逆の動きをしているように感じる機会が増えています。
+政府が積極的に経済に関与し、産業や地域経済の育成を目指す点で共通しています。具体的には、税収をファンドのようにエクイティ（自己資本）として集め、その投資的支出（資産）はインフラや産業の発展を促進する事業に使われます。そのリターンは、経済成長や地域発展を通じて還元される仕組みです。
+
+#### 共同体の資金調達：  
+資本主義では有志から株式のように資金を集めますが、日本の田舎では町内会のように全員一律で集めることを善とする文化が残ります。米国政府はオーナー（国民）から関税という名目で従業員持ち株のように資金調達し、日本政府は国民の預金から半自動的に調達するのではなく外国投資家にアプローチするなど、揺り戻すかのように、二重らせんのように、さまざまな組織レベルで、相互が真逆の動きをしているように感じる機会が増えています。
 
 - 体制:ポスト新自由主義=社会民主主義的な格差是正にシフト?
   - 市場重視・小さな政府（新自由主義・株主資本主義）から、政府介入を重視した社会保障や共感・共有を基盤にする社会民主主義的（昭和の日本的）な社会への移行
