基軸通貨国の問題

--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -78,7 +78,7 @@ tags:
       - スピード、コスト、中立性、透明性
     - 行政的な機能はブロックチェーン上のアプリで行われる？
     - 基軸通貨負担は？特権はどうなる？
-      - その時の無リスク資産は何？
+      - その時の無リスク資産は何？アメリカの失業率とインフレ率で決まって良いの？
 
 - パワーを支える価値観は？
   - 成人発達理論の段階から類推できないか？
@@ -134,16 +134,26 @@ AI技術の進展に伴い、膨大な計算能力とデータ処理を支える
 - 資源：AI時代の資源分配：エネルギー、レアアース（技術革新に不可欠）
 - 体制：行きすぎた市場主義と政府介入によるバランス
 
+***
+
+- 基軸通貨国の問題：
+  - 他国より高い金利を規制できない限り、米国が潰れるまで、キャリートレードは続き、ドル高が続き、輸出競争力が落ち、失業率が上がり、そのせいで金利を下げ、だからインフレが起き、金利が上がり、を繰り返す。
+  - 中央銀行は通貨の安定のために独立しているのではなく、独裁的に（金利操作を通じて）価格操作をする市場を超越した存在になっている。
+  - 対策の方向性：
+    - 多国間金利協定
+    - ドルが基軸通貨の役割を手放す：暗号資産を軸に教科書的な自由主義の理想を推進
+
 ### トランプ政権の価値観：私の理解
 
 トランプ政権の政策は、昭和の日本の地方議員が推進した政策に似ています。  
 
-#### 市場に対する神と「民の手」:  
+- 市場に対する神と「民の手」:  
+  - 政府が積極的に経済に関与し、産業や地域経済の育成を目指す点で共通しています。具体的には、税収をファンドのようにエクイティ（自己資本）として集め、その投資的支出（資産）はインフラや産業の発展を促進する事業に使われます。そのリターンは、経済成長や地域発展を通じて還元される仕組みです。
 
-政府が積極的に経済に関与し、産業や地域経済の育成を目指す点で共通しています。具体的には、税収をファンドのようにエクイティ（自己資本）として集め、その投資的支出（資産）はインフラや産業の発展を促進する事業に使われます。そのリターンは、経済成長や地域発展を通じて還元される仕組みです。
+- 共同体の資金調達：  
+  - 資本主義では有志から株式のように資金を集めますが、日本の田舎では町内会のように全員一律で集めることを善とする文化が残ります。米国政府はオーナー（国民）から関税という名目で従業員持ち株のように資金調達し、日本政府は国民の預金から半自動的に調達するのではなく外国投資家にアプローチするなど、揺り戻すかのように、二重らせんのように、さまざまな組織レベルで、相互が真逆の動きをしているように感じる機会が増えています。
 
-#### 共同体の資金調達：  
-資本主義では有志から株式のように資金を集めますが、日本の田舎では町内会のように全員一律で集めることを善とする文化が残ります。米国政府はオーナー（国民）から関税という名目で従業員持ち株のように資金調達し、日本政府は国民の預金から半自動的に調達するのではなく外国投資家にアプローチするなど、揺り戻すかのように、二重らせんのように、さまざまな組織レベルで、相互が真逆の動きをしているように感じる機会が増えています。
+***
 
 - 体制:ポスト新自由主義=社会民主主義的な格差是正にシフト?
   - 市場重視・小さな政府（新自由主義・株主資本主義）から、政府介入を重視した社会保障や共感・共有を基盤にする社会民主主義的（昭和の日本的）な社会への移行
