プレーヤー：ヘッジファンドとミセスワタナベの貢献

--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -173,6 +173,7 @@ AI技術の進展に伴い、膨大な計算能力とデータ処理を支える
 - 政治：グローバリズムの終焉：新たなローカル（価値ベース、コミュニティ主導、分散ネットワーク化）
 - 外交：新たな覇権：軍事力や資本主義経済（ハードパワー）とは異なる力（ソフトパワー）の台頭
 - 日本：失われた30年は、むしろ守り続けた30年だったのかもしれない。粛々とガラパゴスでGNH。
+- プレーヤー：ヘッジファンドとミセスワタナベの貢献
 
 ## 読みたい本
 
