--- a/_posts/2025-05-13-40y.md
+++ b/_posts/2025-05-13-40y.md
@@ -20,8 +20,8 @@ tags:
 不信認の悲鳴を感じた4/9、その感覚はイレギュラーだから気にしてる。  
 で、ブロックチェーンに飛び込むファーストペンギンの後の流れを目撃したような感覚の4/22があって、
 5/11、日本国債40年債の異常値を知り、「無リスク資産」の分母が気になった。  
-元々理想すぎて未達成の金融理論の前提が崩れかかってないか？と感じたので。  
-そもそもとして保証される「元本」とは何の「価値」？私のフツーと違うから、なんとなく皆さんとは誤解がありそう。ついでに、価値創出マシンの片方は「価値を感じる心」だと思う派。価値提供側との間で。  
+元々理想すぎて未達成の「金融理論の前提」が崩れかかってないか？と感じたので。  
+そもそもとして、保証される「元本」とは何の「価値」？私のフツーと違うから、なんとなく皆さんとは誤解がありそう。ついでに、価値創出マシンの片方は「価値を感じる心」だと思う派。価値提供側との間で。  
 自国通貨建てで保証されても意味無いんじゃ。失われた30年があったり、CPインフレだったり。  
 で、避難先もレイダリオのビッグサイクルが信じられる米国債の逆相関さ。ベッセントも歴史家らしい。  
 
