見えざる手

--- a/_posts/2025-05-13-40y.md
+++ b/_posts/2025-05-13-40y.md
@@ -42,4 +42,7 @@ tags:
 １ゴールドあたりの元本なのか、１幸福あたりの元本なのか、「価値の貯蔵」は人間と空間と時間のどこに置くのか。  
 多次元の価値軸で、変化し続ける価値観の、「生き方」の総合としての世界の。  
 
-ソフトパワーとは、価値観の金融・経済のような、紙を金と思わせる信頼や珍しさの創出、不安と共にいられる勇気のような安心など、ソレとの「間」に投影する形で個々に創出する流れのことに思える。その場で、その時代で、世界の形が魂の形とフィットするように、求めて。  
+価値観の金融・経済のような、紙を金と思わせる信頼や珍しさの創出、不安と共にいられる勇気のような安心など、ソレとの「間」に投影する形で個々に創出する流れがある。ソフトパワー。
+その場で、その時代で、世界の形が魂の形とフィットするように、求めて。  
+
+みんなで見えざる手で介入する世界を社会と呼んでるようにも思う。
