見えざる手

--- a/_posts/2025-05-13-40y.md
+++ b/_posts/2025-05-13-40y.md
@@ -45,4 +45,4 @@ tags:
 価値観の金融・経済のような、紙を金と思わせる信頼や珍しさの創出、不安と共にいられる勇気のような安心など、ソレとの「間」に投影する形で個々に創出する流れがある。ソフトパワー。
 その場で、その時代で、世界の形が魂の形とフィットするように、求めて。  
 
-みんなで見えざる手で介入する世界を社会と呼んでるようにも思う。
+みんなで見えざる手で介入する世界で。
