ホログラフィック

--- a/_posts/2025-05-13-40y.md
+++ b/_posts/2025-05-13-40y.md
@@ -34,7 +34,7 @@ tags:
 実部がマイナス=球外部=宇宙  
 無限遠点への投影=宇宙の膨張  
 に感じる。  
-ホログラフィック原理ってこういうことだろうか。いつか理解したい。  
+ホログラフィック原理ってこういうの関係あるんだろうか。いつか理解したい。  
 [参考:【ホログラフィック宇宙　時空の本質に迫った四半世紀 | 日経サイエンス】](https://www.nikkei-science.com/202311_070.html)
 
 ### 1人生あたりの元本保証
