--- a/_posts/2025-05-13-40y.md
+++ b/_posts/2025-05-13-40y.md
@@ -1,6 +1,6 @@
 ---
 permalink: /20250513-40y/
-title: "日本債40年債のスプレッド差の日、無リスク資産の分母"
+title: "日記：軸という「間」の結晶：日本債40年債のスプレッド差の日、無リスク資産の分母"
 date: 2025-05-13T09:00:31+09:00
 categories:
   - Economy
