--- a/_posts/2025-05-13-40y.md
+++ b/_posts/2025-05-13-40y.md
@@ -8,6 +8,8 @@ tags:
   - レイ・ダリオ
 ---
 
+[この記事のChat GPTによる解説はこちら](https://chatgpt.com/share/6825f187-29f0-800b-aa37-599ae9f7d5e6)
+
 ### 人と人との間
 
 ずっと「人間」の「間」のほうを見てる。価値、感情、コミュニケーション、社会など。  
@@ -15,7 +17,7 @@ tags:
 その場の、時代の、今ここにある定量化できないエネルギーのようなことは気になる。  
 西田幾多郎とハイデッガーは理解できない。  
 
-#### 「基軸通貨への不信認感情」への共感的理解
+### 「基軸通貨への不信認感情」への共感的理解
 
 不信認の悲鳴を感じた4/9、その感覚はイレギュラーだから気にしてる。  
 で、ブロックチェーンに飛び込むファーストペンギンの後の流れを目撃したような感覚の4/22があって、
@@ -25,7 +27,7 @@ tags:
 自国通貨建てで保証されても意味無いんじゃ。失われた30年があったり、CPインフレだったり。  
 で、避難先もレイダリオのビッグサイクルが信じられる米国債の逆相関さ。ベッセントも歴史家らしい。  
 
-#### 分かち難いものを切り取る際の軸 
+### 分かち難いものを切り取る際の軸 
 
 「新たな世界秩序」の基軸は？と考えていて、虚軸のような分割し難いことのメタファーとして四元数の動画を見に。カメラの回転を記述するときに見て、思考を発散させるときに使えそうだなと。  
 [参考:【4次元の数 ｢四元数｣の見た目 - YouTube】](https://www.youtube.com/watch?t=1211&v=94NmanMgR9k&feature=youtu.be)
