--- a/_posts/2025-05-13-40y.md
+++ b/_posts/2025-05-13-40y.md
@@ -5,7 +5,11 @@ date: 2025-05-13T09:00:31+09:00
 categories:
   - Economy
 tags:
+  - 価値
   - レイ・ダリオ
+  - 四元数
+  - 統合
+  - 間主観性
 ---
 
 [この記事のChat GPTによる解説はこちら](https://chatgpt.com/share/6825f187-29f0-800b-aa37-599ae9f7d5e6)
@@ -38,6 +42,8 @@ tags:
 に感じる。  
 ホログラフィック原理ってこういうの関係あるんだろうか。いつか理解したい。  
 [参考:【ホログラフィック宇宙　時空の本質に迫った四半世紀 | 日経サイエンス】](https://www.nikkei-science.com/202311_070.html)
+
+[追記：上記の解説はこちら]({{ '/2025-05-14-dimension/' | relative_url }})
 
 ### 1人生あたりの元本保証
 
