--- a/_posts/2025-05-13-40y.md
+++ b/_posts/2025-05-13-40y.md
@@ -6,10 +6,13 @@ categories:
   - Economy
 tags:
   - 価値
+  - 金融
   - レイ・ダリオ
   - 四元数
-  - 統合
+  - 分離と統合
   - 間主観性
+  - 線形回帰
+  - 因子分析＋Promax回転
 ---
 
 [この記事のChat GPTによる解説はこちら](https://chatgpt.com/share/6825f187-29f0-800b-aa37-599ae9f7d5e6)
