--- a/_posts/2025-05-13-40y.md
+++ b/_posts/2025-05-13-40y.md
@@ -36,7 +36,7 @@ tags:
 
 ### 分かち難いものを切り取る際の軸 
 
-「新たな世界秩序」の基軸は？と考えていて、虚軸のような分割し難いことのメタファーとして四元数の動画を見に。カメラの回転を記述するときに見て、思考を発散させるときに使えそうだなと。  
+「新たな世界秩序」の基軸は？と考えていて、虚軸のような分割し難いことのメタファーとして四元数の動画を見に。CGのカメラの回転をcodeで記述するときに知って、思考を発散させるときに使えそうだなと思ったので。  
 [参考:【4次元の数 ｢四元数｣の見た目 - YouTube】](https://www.youtube.com/watch?t=1211&v=94NmanMgR9k&feature=youtu.be)
 動画20分のあたり  
 実部がゼロ=球面=地面  
@@ -53,7 +53,7 @@ tags:
 １ゴールドあたりの元本なのか、１幸福あたりの元本なのか、「価値の貯蔵」は人間と空間と時間のどこに置くのか。  
 多次元の価値軸で、変化し続ける価値観の、「生き方」の総合としての世界の。  
 
-価値観の金融・経済のような、紙を金と思わせる信頼や珍しさの創出、不安と共にいられる勇気のような安心など、ソレとの「間」に投影する形で個々に創出する流れがある。ソフトパワー。
+「価値観の金融・経済」と冗長に呼びたいような、紙を金と思わせる信頼や珍しさの創出、不安と共にいられる勇気のような安心など、ソレとの「間」に投影する形で個々に創出する流れがある。ソフトパワー。
 その場で、その時代で、世界の形が魂の形とフィットするように、求めて。  
 
 みんなで見えざる手で介入する世界で。
