--- a/_posts/2025-05-13-40y.md
+++ b/_posts/2025-05-13-40y.md
@@ -13,6 +13,7 @@ tags:
   - 間主観性
   - 線形回帰
   - 因子分析＋Promax回転
+  - アントレプレニューリアルファイナンス
 ---
 
 [この記事のChat GPTによる解説はこちら](https://chatgpt.com/share/6825f187-29f0-800b-aa37-599ae9f7d5e6)
@@ -57,3 +58,8 @@ tags:
 その場で、その時代で、世界の形が魂の形とフィットするように、求めて。  
 
 みんなで見えざる手で介入する世界で。
+
+
+---
+
+[参考:【How to Fold a Julia Fractal — Acko.net】](https://acko.net/blog/how-to-fold-a-julia-fractal/)
