--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -1,5 +1,5 @@
 ---
-title: "(更新中:2025/5/11)仮説：次の覇権国が日本だとしたら〜「魅力」を「ディール」する〜"
+title: "(更新中:2025/5/11)日記：仮説：次の覇権国が日本だとしたら〜「魅力」を「ディール」する〜"
 date: 2025-05-11T04:30:31+09:00
 categories:
   - Economy
