--- a/_posts/2025-05-13-40y.md
+++ b/_posts/2025-05-13-40y.md
@@ -16,7 +16,7 @@ tags:
   - アントレプレニューリアルファイナンス
 ---
 
-[この記事のChat GPTによる解説はこちら](https://chatgpt.com/share/6825f187-29f0-800b-aa37-599ae9f7d5e6)
+[ChatGPTによる解説はこちら](https://chatgpt.com/share/6825f187-29f0-800b-aa37-599ae9f7d5e6)
 
 ### 人と人との間
 
