--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -30,8 +30,15 @@ tags:
   - 逆に日本は、漫画・アニメ・技術・文化などを通じて、国際的な魅力を高め、世界的な影響力を増している。
 
 - 日本の可能性
-  - 軍事・安全保障面で、潜在的な技術力を有しており、今後さらにその力を活用する可能性がある。
-  - しかし、ハードパワーは依然として限られているため、アメリカの支援が不可欠。
+  - 軍事・安全保障面で、潜在的な技術力・経済力を有しており、今後さらにその力を活用する可能性がある。
+    - 生産年齢人口1人当たりGDPの成長率は先進7カ国（G7）で日本が最も高かった(2008年〜2019年)
+      - [参考:【ウォール・ストリート・ジャーナル：日本の経済成長率はG7トップ、この指標なら】](https://mainichi.jp/articles/20240118/org/00m/020/008000d)
+      - [主要国の生産性：日本銀行](https://www.boj.or.jp/about/press/koen_2018/data/ko180704a2.pdf)
+    - ECI(経済複雑性指標)1位
+      - 経済成長のより正確な予測手法
+      - その国家がいかに多様であるか、またその国家の産業がいかに洗練されているか の両方を測定
+        - [参考:【経済複雑性指標 - Wikipedia】](https://ja.wikipedia.org/wiki/%E7%B5%8C%E6%B8%88%E8%A4%87%E9%9B%91%E6%80%A7%E6%8C%87%E6%A8%99)
+        - [参考:【20年連続No.1「経済の複雑性」をもち味に。スモール・ジャイアンツが飛躍する方法】](https://forbesjapan.com/articles/detail/72867)
 
 - お金の中心であるアジアという重要な地域
   - アメリカの「覇権」を考えると、日本と米国でディール（取引）できることが多数ありそう。
