asis image edit

--- a/_posts/2025-05-04-haken.md
+++ b/_posts/2025-05-04-haken.md
@@ -9,6 +9,7 @@ tags:
   - ジョセフ・ナイ
   - レイ・ダリオ
   - 関税
+  - 覇権
 ---
 
 ## 本記事の概要
@@ -39,6 +40,8 @@ tags:
       - その国家がいかに多様であるか、またその国家の産業がいかに洗練されているか の両方を測定
         - [参考:【経済複雑性指標 - Wikipedia】](https://ja.wikipedia.org/wiki/%E7%B5%8C%E6%B8%88%E8%A4%87%E9%9B%91%E6%80%A7%E6%8C%87%E6%A8%99)
         - [参考:【20年連続No.1「経済の複雑性」をもち味に。スモール・ジャイアンツが飛躍する方法】](https://forbesjapan.com/articles/detail/72867)
+  - 追記：バフェットのような投資哲学＋多次元分散・全天候型のポートフォリオを持っている？
+    - [日記：国家の連結会計]({{ '/20250519KokkaRenketsu/' | relative_url }})
 
 - お金の中心であるアジアという重要な地域
   - アメリカの「覇権」を考えると、日本と米国でディール（取引）できることが多数ありそう。
