--- a/_posts/2025-05-24-LLM.md
+++ b/_posts/2025-05-24-LLM.md
@@ -1,6 +1,6 @@
 ---
 permalink: /20250524LLM/
-title: "日記："
+title: "日記：ChatGPTは「o4-miniと雑談してプロンプトを作ってもらい、それをo3,4.5に同時に投げて吟味する。」という使い方で良い？"
 date: 2025-05-24T018:30:31+09:00
 categories:
   - Economy
